Fix package installation: move cursor-rules inside devenv package
- Move cursor-rules/ to devenv/cursor-rules/ so it gets installed with the package
- Add MANIFEST.in to include cursor-rules in distribution
- Update pyproject.toml with package-data configuration
- Update setup.py to find cursor-rules at correct location
- Update README with new structure paths

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,3 +17,13 @@ dependencies = [
 [project.scripts]
 devenv = "devenv.cli:main"
 
+[tool.setuptools]
+include-package-data = true
+
+[tool.setuptools.packages.find]
+where = ["."]
+include = ["devenv*"]
+
+[tool.setuptools.package-data]
+devenv = ["cursor-rules/**/*"]
+
